--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,67 +7,67 @@
         android:layout_height="match_parent"
         tools:context=".activity.register">
 
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="100dp"
-               android:id="@+id/image"
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+              android:text="Register" android:textStyle="bold"
+              android:textSize="40dp" android:gravity="center"
 
-               android:src="@drawable/ic_android_black_24dp"
-               app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-               android:layout_marginTop="8dp" android:layout_marginBottom="52dp"
-               app:layout_constraintBottom_toTopOf="@+id/username"
-               app:layout_constraintVertical_bias="0.49" app:layout_constraintEnd_toEndOf="parent"
-               app:layout_constraintHorizontal_bias="0.0"/>
-    <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="22dp"
-            android:text="Username"
-            android:textStyle="bold"
-            android:textSize="14dp"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.31" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
-
-    <EditText android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/tvUser"
-              android:hint="username"
-              app:layout_constraintStart_toStartOf="parent"
-              android:layout_marginTop="8dp"
-              app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginBottom="8dp"
-              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"
-              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="password"
-              android:id="@+id/textView2"
-              android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvUser"
-              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-              android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-              android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
-
-    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tvPassword"
-              android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-              android:hint="password"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"/>
-    <Button
-            android:text="register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:textColor="@android:color/holo_green_dark"
-            android:id="@+id/register" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.00999999"/>
+              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0" android:id="@+id/textView"/>
 
+    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
+              android:id="@+id/fullname" android:hint="FUll NAME"
+              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+              android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.176"
+              app:layout_constraintHorizontal_bias="0.0"/>
+
+    <EditText android:layout_width="match_parent" android:layout_height="41dp"
+              android:id="@+id/email" android:hint="EMAIL ADDRESS"
+              app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.249"
+              app:layout_constraintHorizontal_bias="0.0"/>
+
+    <EditText android:layout_width="match_parent" android:layout_height="41dp"
+              android:id="@+id/university" android:hint="UNIVERSITY/ORGANIZATION"
+              android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+              app:layout_constraintVertical_bias="0.327" app:layout_constraintHorizontal_bias="0.0"/>
+
+    <EditText android:layout_width="match_parent" android:layout_height="41dp"
+              android:id="@+id/pass" android:hint="PASSWORD"
+              android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+              app:layout_constraintVertical_bias="0.409" app:layout_constraintHorizontal_bias="0.0"/>
+
+    <EditText android:layout_width="match_parent" android:layout_height="41dp"
+              android:id="@+id/confirmpassword" android:hint="CONFIRM PASSWORD"
+              android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+              app:layout_constraintHorizontal_bias="0.0"/>
+
+    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:id="@+id/register" android:text="Register" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.604" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
