--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,16 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".activity.register">
 
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="100dp"
-               android:id="@+id/image"
-
-               android:src="@drawable/ic_android_black_24dp"
-               app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-               android:layout_marginTop="8dp" android:layout_marginBottom="52dp"
-               app:layout_constraintBottom_toTopOf="@+id/username"
-               app:layout_constraintVertical_bias="0.49" app:layout_constraintEnd_toEndOf="parent"
-               app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="LOGIN"
+              android:gravity="center" android:textSize="45dp" android:textStyle="bold" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
     <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
@@ -31,7 +27,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.31" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+            app:layout_constraintVertical_bias="0.145" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 
     <EditText android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -42,14 +39,16 @@
               app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"
-              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+              app:layout_constraintHorizontal_bias="0.0"/>
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="password"
               android:id="@+id/textView2"
               android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvUserLogin"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
+              app:layout_constraintHorizontal_bias="0.0"/>
 
     <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tvPasswordLogin"
               android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -57,7 +56,8 @@
               app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
               android:hint="password"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"/>
+              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"
+              app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="login"
             android:layout_width="wrap_content"
