--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_start">16dp</dimen>
+    <dimen name="left">16dp</dimen>
+    <dimen name="bottom">4dp</dimen>
+    <dimen name="top">10dp</dimen>
 </resources>
