--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,15 +7,30 @@
         android:layout_height="match_parent"
         tools:context=".activity.register">
 
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbaregister"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            android:elevation="4dp"
+
+            app:title="Register"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="6dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
+
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
               android:text="Register" android:textStyle="bold"
-              android:textSize="40dp" android:gravity="center"
+              android:textSize="30dp" android:gravity="center"
 
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0" android:id="@+id/textView"/>
+              android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.07999998"
+              android:id="@+id/textView"/>
 
     <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
               android:id="@+id/fullname" android:hint="FUll NAME"
