--- a/app/src/main/res/menu/menu_main_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_main_bottom_nav.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/navHome"
-          android:icon="@drawable/ic_launcher_background"
-          android:title="@string/home"/>
-    <item android:id="@+id/navMateri"
-          android:icon="@drawable/ic_android_black_24dp"
-          android:title="@string/materi"/>
-    <item android:id="@+id/navProfile"
-          android:icon="@drawable/ic_launcher_foreground"
-          android:title="@string/profile"/>
+    <item
+            android:id="@+id/logout"
+
+            android:title="Logout"
+
+            app:showAsAction="always"/>
 </menu>
